# minifuture

./: README.md  mini.go  pyproject.toml
src/strike_selector/: __init__.py  __main__.py  cli.py  models.py  selection.py  utils.py
src/strike_selector/providers/: __init__.py  avanza.py  vontobel.py  vontobel_api.py
